objects/Assigned_Payments__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Text__c</fullName>
        <label>Amount Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Payment__c</fullName>
        <formula>IF( 
AND(Number_of_Payments__c &gt;=2,Percent_Increase__c = 0), 
TEXT(Number_of_Payments__c) + &quot; &quot; + LOWER(TEXT(Payment_Type__c)) + &quot; &quot; + LOWER(TEXT(Payment_Frequency__c)) + &quot; payments in the amount of $&quot; + Text(floor(Amount__c)) + &quot;.&quot; + lpad(Text((Amount__c-floor(Amount__c))*100),2,&quot;0&quot;) + &quot; each, commencing with the payment due and payable on or about &quot; + TEXT( MONTH( First_Payment_Date__c ) ) + &quot;/&quot; + TEXT( DAY( First_Payment_Date__c ) ) + &quot;/&quot; + TEXT( YEAR( First_Payment_Date__c ) ) + &quot; and continuing through and including the payment due and payable on or about &quot; + TEXT( MONTH(Last_Payment_Date__c) ) + &quot;/&quot; + TEXT( DAY(Last_Payment_Date__c) ) + &quot;/&quot; + TEXT( YEAR(Last_Payment_Date__c) ) + &quot;.&quot;, 
IF( 
Number_of_Payments__c = 1, 
&quot;One lump sum payment in the amount of $&quot; + Text(floor(Amount__c)) + &quot;.&quot; + lpad(Text((Amount__c-floor(Amount__c))*100),2,&quot;0&quot;) + &quot; due and payable on or about &quot; + TEXT( MONTH( First_Payment_Date__c ) ) + &quot;/&quot; + TEXT( DAY( First_Payment_Date__c ) ) + &quot;/&quot; + TEXT( YEAR( First_Payment_Date__c ) ) + &quot;.&quot;, 
IF(AND( 
Number_of_Payments__c &gt;=2, Percent_Increase__c &lt;&gt; 0), 
TEXT(Number_of_Payments__c) + &quot; &quot; + &quot; consecutive &quot; + LOWER(TEXT(Payment_Type__c)) + &quot; &quot; + LOWER(TEXT(Payment_Frequency__c)) + &quot; payments, commencing with the payment due and payable on or about &quot; + TEXT( MONTH( First_Payment_Date__c ) ) + &quot;/&quot; + TEXT( DAY( First_Payment_Date__c ) ) + &quot;/&quot; + TEXT( YEAR( First_Payment_Date__c ) ) + &quot; and continuing through and including the payment due and payable on or about &quot; + TEXT( MONTH(Last_Payment_Date__c) ) + &quot;/&quot; + TEXT( DAY(Last_Payment_Date__c) ) + &quot;/&quot; + TEXT( YEAR(Last_Payment_Date__c) ) + &quot;, with the initial payments being in an amount of $&quot; + Text(floor(Amount__c)) + &quot;.&quot; + lpad(Text((Amount__c-floor(Amount__c))*100),2,&quot;0&quot;) + &quot;, subject to an annual adjustment of &quot; + TEXT(ROUND(Percent_Increase__c*100,0)) + &quot;% each &quot; + TEXT( Month_Of_Increase__c) + &quot; so that the amount of the payment made on each adjustment date shall equal &quot; + TEXT(ROUND(Percent_Increase_100__c*100,0)) + &quot;% of the immediately preceding payment, and which amount shall apply until the next adjustment date.&quot;, 
NULL 
) 
) 
)</formula>
        <label>Applied Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Payment__c</fullName>
        <label>Assigned Payment Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_Of_Increase__c</fullName>
        <label>Month Of Increase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <label>Number of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Cash_Flows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>monthly</fullName>
                </value>
                <value>
                    <fullName>quarterly</fullName>
                </value>
                <value>
                    <fullName>semiannual</fullName>
                </value>
                <value>
                    <fullName>annual</fullName>
                </value>
                <value>
                    <fullName>weekly</fullName>
                </value>
                <value>
                    <fullName>lump sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>guaranteed</fullName>
                </value>
                <value>
                    <fullName>life-contingent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Increase_100__c</fullName>
        <formula>Percent_Increase__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Increase + 100%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Increase__c</fullName>
        <inlineHelpText>If there is no Percent Increase, please enter 0</inlineHelpText>
        <label>Percent Increase</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Assigned Payment</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Assigned Payment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Month_of_increase_required_with_Pct_Incr</fullName>
        <active>true</active>
        <description>If Percent Increase is &gt; 0 then Month of increase must be populated</description>
        <errorConditionFormula>AND(
  Percent_Increase__c &gt; 0,
  ISBLANK(TEXT(Month_Of_Increase__c))
)</errorConditionFormula>
        <errorDisplayField>Month_Of_Increase__c</errorDisplayField>
        <errorMessage>A Month of Increase must be selected if the Percent Increase value is greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_increase_for_lumpsum_or_weekly_pmts</fullName>
        <active>true</active>
        <description>Lump sum and weekly payments should not have percent increase/month of increase values populated</description>
        <errorConditionFormula>AND(
  OR(
    TEXT(Payment_Frequency__c) = &quot;lump sum&quot;,
    TEXT(Payment_Frequency__c) = &quot;weekly&quot;
  ),
  OR(
    Percent_Increase__c != 0,
    NOT(TEXT(Month_Of_Increase__c) = &quot;&quot;)
  )
)</errorConditionFormula>
        <errorDisplayField>Payment_Frequency__c</errorDisplayField>
        <errorMessage>For lump sum and weekly payments, ensure that Percent Increase is 0 and Month of Increase remains blank.</errorMessage>
    </validationRules>
</CustomObject>